package tron.logic;

/**
 * Represents the four cardinal directions available for movement.
 */
public enum Direction {
    UP, DOWN, LEFT, RIGHT
}
